--- a/Calculator.Tests/app.config
+++ b/Calculator.Tests/app.config
@@ -3,8 +3,9 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
+  
   <appSettings>
-    <add key="UrlOfCalculator" value="http://localhost:56000/"/>
+    <add key="UrlOfCalculator" value="http://localhost:56000/" />
     <add key="IISExpressPath" value="C:\Program Files (x86)\IIS Express\iisexpress.exe" />
     <add key="CalculatorPath" value="Calculator" />
   </appSettings>
@@ -17,7 +18,7 @@
     </assemblyBinding>
   </runtime>
   <specFlow>
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+    
     <unitTestProvider name="MsTest" />
-  </specFlow>
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
 </configuration>
